--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     --font-size: 24pt;
     background: black !important;
     font-size: var(--font-size) !important;
+    max-height: 20rem;
+    overflow: auto;
   }
 
   pre * {
